--- a/members/subscribe.html
+++ b/members/subscribe.html
@@ -1,5 +1,5 @@
 ---
-layout: subscribe
+layout: default
 title: "Subscribe to Premium Lessons"
 ---
 
@@ -9,7 +9,8 @@ title: "Subscribe to Premium Lessons"
     You need to become a premium subscriber to access this lesson.
   </p>
 
+  <!-- Here is where you convince the user why they should purchase a subscription. -->
+
+  <!-- Clicking this button will launch the embedded checkout modal for the specified plan "all-access-pass" -->
   <button class="primary-button" data-paywall-subscribe data-paywall-plan-id="all-access-pass">Become a premium subscriber</button>
 </div>
-
-
