--- a/members/thankyou.html
+++ b/members/thankyou.html
@@ -20,20 +20,6 @@ layout: default
   </div>
     
   <div style="margin-top: 40px;">
-    <a class="primary-button" data-paywall-thankyou-return-url>Click here to access your premium lesson</a>
+    <h3><a data-paywall-thankyou-return-url href="#">Click here to access your premium lesson</a></h3>
   </div>
-
-  <script id="thankyou_template" type="x-tmpl-mustache">
-    <div>
-      Subscription plan: <strong><% plan_id %></strong>
-    </div>
-    <div>
-      Subscription id: <strong><% subscription_id %></strong>
-    </div>
-    
-    <div style="margin-top: 40px;">
-      <a class="primary-button" href="<% return_url %>">Click here to access your premium lesson</a>
-    </div>
-  </script>
-  <div id="thankyou_content"></div>
 </div>
