Remove dependency on jQuery

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ layout: default
 
   <h2>Premium Lessons</h2>  
   <p>Upon clicking any of the premium lesson links below, if the user is not yet logged-in, they will first be prompted to register. After registering they will be presented with a link to purchase a subscription.</p>
-  
+  <p><a href="https://github.com/aerobatic/paywall-demo-basic" target="_blank">Full source code available on GitHub</a></p>
+
   <!--
     Any page nested within the /members/* directory requires the user to
     be both logged-in and have the "subscriber" role.
